--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ button:hover{
 }
 .f-parts>ul{
     list-style-type: none;
+    cursor: pointer;
     font-size: 18px;
     color: #B2D430;
 }
@@ -254,6 +255,9 @@ button:hover{
     transition: .3s all;
     color: #B2D430;
     text-decoration: none;
+}
+.f-para:hover{
+    color: #ffffff;
 }
 .form-field>input{
     background-color: transparent;
@@ -275,6 +279,7 @@ button:hover{
     right: 45px;
     padding-left: 15px;
     padding-right: 15px;
+    cursor: pointer;
 }
 .footer-row-2{
     display: flex;
@@ -293,4 +298,70 @@ p>a{
     color: #B2D430;
     font-size: 25px;
     margin-right: 30px;
+}
+.f-3>a>i:hover{
+    color: #ffffff;
+}
+
+
+/* Responsiveness */
+
+@media screen and (max-width:1075px) {
+
+.green-logo{
+    margin-left: -80px;
+}    
+h1{
+    font-size: 100px;
+}
+p{
+    font-size: 15px
+}
+button{
+    padding: 10px 35px;
+}
+.heading{
+    font-size: 60px;
+}
+.sub-heading{
+    font-size: 15px;
+    text-align: center;
+}
+.footer-row-1{
+    display: flex;
+    flex-direction: column;
+}
+.footer-row-2{
+    display: flex;
+    flex-direction: column;
+}
+.f-3{
+    margin-top: 30px;
+}
+.subscribe-btn{
+    position:absolute;
+    top: 698px;
+    right: 10px;
+}
+
+.form-field>input{
+    width: 100%;
+}
+}
+@media screen and (max-width:665px) {
+.subscribe-btn{
+    right: 10px;
+    top: 718px;
+}
+.nav-list{
+    display: flex;
+    gap: 10px;
+    font-size: 15px;
+}
+}
+@media screen and (max-width:591px) {
+.subscribe-btn{
+    right: 10px;
+    top: 741px;
+}
 }
